compiler/testData/diagnostics/tests/generics/projectionsScope/multipleArgumentProjectedOut.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER
// !WITH_NEW_INFERENCE

class A<T> {
    fun foo(x: T, y: T) {}
}

fun test(a: A<out CharSequence>) {
    a.<!MEMBER_PROJECTED_OUT!>foo<!>("", "")
}
